# vks-bootstraper

./: .gitignore  README.md  cli.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
flatcar/: metadata.py  ssh_utils.py  vks-bootstraper.py  vks-bootstraper.spec
vks/: __main__.py
vks-bootstraper/: __init__.py
vks_bootstraper/: __main__.py  metadata.py  ssh_utils.py  vks-bootstraper.py  vks-bootstraper.spec
vks_bootstraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
