[build-system]
requires = ["setuptools>=65.5.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vks-bootstraper"
version = "1.4.0"
description = "The CLI tool to boostrap the instances of VKS clusters."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests >= 2.25.1",
    "click >= 8.0.3",
    "pyyaml >= 5.4.1",
]

[project.scripts]
vks-bootstraper = "vks_bootstraper.__main__:cli"